# fast-crc

./: .gitignore  CMakeLists.txt  Readme.adoc  crc.c  crc.h  crc_algorithms.template  fast_crc.c  license.adoc
algorithms/: crc12_umts.inc  crc16_fast.inc  crc16_fast4.inc  crc16_fast6.inc  crc16_ibm3740.inc  crc16_ibm3740_offset.inc  crc16_mcrfxx.inc  crc16_modbus.inc  crc16_nguyen.inc  crc16_nguyen_0007.inc  crc16_nguyen_011b.inc  crc16_nguyen_Fx0007.inc  crc16_nguyen_Fx011b.inc  crc24_fast4.inc  crc24_fast6.inc  crc24_nguyen_018301.inc  crc24_nguyen_Fx000007.inc  crc24_nguyen_Fx018301.inc  crc32_fast6.inc  crc32_hdlc.inc  crc32_hdlc_offset.inc  crc32_nguyen_0006c001.inc  crc32_nguyen_Fx0006c001.inc  crc64_fast6.inc  crc64_nguyen_Fx000000000000002f.inc  crc64_xz.inc  crc8_fast.inc  crc8_fast4.inc  crc8_koopman.inc  crc8_nguyen.inc  crc8_nguyen_Fx07.inc  crc_interface.h
crc_algorithms/: crc12_umts.inc  crc16_ccitt.inc  crc16_dds_110.inc  crc16_fast4.inc  crc16_ibm3740.inc  crc16_kermit.inc  crc16_mcrfxx.inc  crc16_modbus.inc  crc16_nguyen_Fx0007.inc  crc16_nguyen_Fx011b.inc  crc24_fast4.inc  crc24_fast6.inc  crc24_nguyen_Fx000007.inc  crc24_nguyen_Fx018301.inc  crc32_fast6.inc  crc32_hdlc.inc  crc32_nguyen_Fx0006c001.inc  crc64_fast6.inc  crc64_nguyen_Fx000000000000002f.inc  crc64_xz.inc  crc8_fast4.inc  crc8_koopman.inc  crc8_nguyen_Fx07.inc  interface.h
crc_kernels/: bit_reverse.c  crc_tables.h  endianness.h
documentation/: project_notes.adoc  road_map.adoc  user_guide.adoc
examples/kernel_selection/: CMakeLists.txt  crc_algorithms.inc  kernel_selection.c
examples/multipass_interface/: CMakeLists.txt  crc_algorithms.inc  multipass_interface.c
kernels/: bit_reverse.c  byte_swap.c  crc_kernel.h  crc_kernel16.c  crc_kernel32.c  crc_kernel64.c  crc_kernel_common.c  crc_kernel_table4.h  crc_kernel_table8.h  crc_kernelx.c  (+4 more)
(+2525 files in other folders)
